--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -8,5 +8,6 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data source=ToDo.db"
-  }
+  },
+  "TokenKey": "Some secret 32 bit random unreadable secret server key"
 }
